Prevent marker wrapping and fix alignment

--- a/ui/v2.5/src/components/ScenePlayer/styles.scss
+++ b/ui/v2.5/src/components/ScenePlayer/styles.scss
@@ -187,18 +187,13 @@ $sceneTabWidth: 450px;
     left: 0;
     opacity: 1;
     position: absolute;
-    -webkit-transition: opacity 0.2s ease;
-    -moz-transition: opacity 0.2s ease;
     transition: opacity 0.2s ease;
+    visibility: hidden;
     width: 6px;
     z-index: 100;
 
     &:hover {
       cursor: pointer;
-      -webkit-transform: scale(1.3, 1.3);
-      -moz-transform: scale(1.3, 1.3);
-      -o-transform: scale(1.3, 1.3);
-      -ms-transform: scale(1.3, 1.3);
       transform: scale(1.3, 1.3);
     }
   }
@@ -216,6 +211,7 @@ $sceneTabWidth: 450px;
     position: absolute;
     top: -3.4em;
     visibility: hidden;
+    white-space: nowrap;
     z-index: 1;
   }
 
